@@ -28,7 +28,7 @@ Alien::automake                                = 0.15
 Alien::Autotools                               = 1.05
 Alien::Base::ModuleBuild                       = 1.14
 Alien::bison                                   = 0.21
-Alien::Build                                   = 2.23
+Alien::Build                                   = 2.26
 Alien::Build::Git                              = 0.08
 Alien::Build::MB                               = 0.07
 Alien::Build::Plugin::Decode::SourceForge      = 0.02
@@ -38,6 +38,7 @@ Alien::Build::Plugin::Probe::GnuWin32          = 0.59
 Alien::Build::Plugin::Probe::Override          = 0.03
 Alien::Build::Plugin::Fetch::Prompt            = 0.59
 Alien::Build::Plugin::Fetch::Rewrite           = 0.02
+Alien::castxml                                 = 0.01
 Alien::chromaprint                             = 0.02
 Alien::CMake                                   = 0.11
 Alien::cmake3                                  = 0.05
@@ -53,7 +54,7 @@ Alien::help2man                                = 0.01
 Alien::Hunspell                                = 0.16
 Alien::Libarchive3                             = 0.29
 Alien::Libbz2                                  = 0.24
-Alien::libnewrelic                             = 0.04
+Alien::libnewrelic                             = 0.05
 Alien::libpcre                                 = 0.01
 Alien::Librdkafka                              = 1.05
 Alien::LibreSSL                                = 0.03
@@ -71,7 +72,7 @@ Alien::pkgconf                                 = 0.17
 Alien::Role::Alt                               = 0.05
 Alien::Role::Dino                              = 0.06
 Alien::unzip                                   = 0.03
-Alien::wasmtime                                = 0.10
+Alien::wasmtime                                = 0.11
 Alien::xz                                      = 0.06
 ;Alt::Alien::cmake::System                     = 0.0402
 ;Alt::Alien::FFI::System                       = 0.21
@@ -82,9 +83,9 @@ AnyEvent::FTP                                  = 0.16
 AnyEvent::Ident                                = 0.08
 AnyEvent::Open3::Simple                        = 0.87
 AnyEvent::WebSocket::Client                    = 0.53
-App::af                                        = 0.15
+App::af                                        = 0.16
 App::cpangitify                                = 0.17
-App::plasm                                     = 0.01
+App::plasm                                     = 0.02
 App::Prove::Plugin::TermTable                  = 0.03
 App::Prove::Plugin::TermTableStty              = 0.03
 App::pwhich                                    = 1.16
@@ -96,7 +97,9 @@ Archive::Ar::Libarchive                        = 2.08
 Archive::Libarchive::Any                       = 0.0900
 Archive::Libarchive::XS                        = 0.0902
 Browser::Start                                 = 0.01
+Clang::CastXML                                 = 0.01
 Class::Inspector                               = 1.36
+Const::Introspect::C                           = 0.01
 Devel::ebug                                    = 0.60
 Dist::Zilla::App::Command::aliendeps           = 0.03
 Dist::Zilla::Plugin::AlienBuild                = 0.31
@@ -110,25 +113,25 @@ Dist::Zilla::Plugin::MathInt64                 = 0.10
 Dist::Zilla::Plugin::OurPkgVersion             = 0.21
 Dist::Zilla::Plugin::Test::Version             = 1.09
 Dist::Zilla::Plugin::TextTabs                  = 0.04
-Dist::Zilla::PluginBundle::Author::Plicease    = 2.47
+Dist::Zilla::PluginBundle::Author::Plicease    = 2.51
 Env::ShellWords                                = 0.02
 Exception::Class::DBI                          = 1.04
 FFI                                            = 1.15
 FFI::C                                         = 0.08
 FFI::CheckLib                                  = 0.27
-FFI::ExtractSymbols                            = 0.03
-FFI::Platypus                                  = 1.28
-FFI::Platypus::Lang::CPP                       = 0.04
+FFI::ExtractSymbols                            = 0.04
+FFI::Platypus                                  = 1.31
+FFI::Platypus::Lang::CPP                       = 0.05
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
-FFI::Platypus::Lang::Fortran                   = 0.11
+FFI::Platypus::Lang::Fortran                   = 0.12
 FFI::Platypus::Lang::Go                        = 0.01
-FFI::Platypus::Lang::Pascal                    = 0.06
+FFI::Platypus::Lang::Pascal                    = 0.07
 FFI::Platypus::Lang::Rust                      = 0.09
 FFI::Platypus::Legacy::Raw                     = 0.06
 FFI::Platypus::Record::StringArray             = 0.01
 FFI::Platypus::Type::Enum                      = 0.03
 FFI::Platypus::Type::PtrObject                 = 0.02
-FFI::TinyCC                                    = 0.29
+FFI::TinyCC                                    = 0.30
 FFI::TinyCC::Inline                            = 0.28
 File::LibMagic::FFI                            = 0.04
 File::Listing::Ftpcopy                         = 0.09
@@ -139,7 +142,7 @@ Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.04
 Mojolicious::Plugin::Ident                     = 0.31
 Mojolicious::Plugin::TtRenderer                = 1.60
-NewFangle                                      = 0.02
+NewFangle                                      = 0.03
 PeekPoke::FFI                                  = 0.02
 Perl::Critic::Plicease                         = 0.03
 Photography::DX                                = 0.02
@@ -167,8 +170,7 @@ Test2::Tools::URL                              = 0.05
 Text::Hunspell::FFI                            = 0.02
 URI::ws                                        = 0.03
 UUID::FFI                                      = 0.07
-Wasm                                           = 0.10
-Wasm::Hook                                     = 0.02
+Wasm                                           = 0.14
 WebService::DailyConnect                       = 0.02
 Win32::ErrorMode                               = 0.06
 Win32::Getppid                                 = 0.05
